feat: finish section 1

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,6 +10,7 @@
 :root {
   --page-bg: #fff;
   --primary-color: #458ff6;
+  --primary-text-color: #7d7987;
 
   --active-link-color: #1f1534;
   --link-color: #1f153480;
