feat: section2, import icons

--- a/src/components/common/layout/styles.module.scss
+++ b/src/components/common/layout/styles.module.scss
@@ -1,9 +1,6 @@
 .layout {
-  max-width: 1410px;
-
+  padding: 0 163px;
   padding-top: 80px;
-  padding-right: 163px;
-  padding-left: 191px;
 
   // margin: 0 auto;
 }
