--- a/src/components/common/link/styles.module.scss
+++ b/src/components/common/link/styles.module.scss
@@ -19,6 +19,7 @@
 .button-outlined {
   display: flex;
   align-items: center;
+  justify-content: center;
   box-sizing: border-box;
   font-weight: 700;
   font-size: 18px;
